2007-11-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/admin_gtk.py (BaseAdminGtkNode.error,
	  BaseAdminGtkNode.haveWtree, BaseAdminGtkNode.loadGladeFileErrback,
	  BaseAdminGtkNode.renderFinished,
	  BaseAdminGtkNode.renderFinishedErrback, BaseAdminGtkNode.addMessage):
	  This should teach me to fix code being refactored.
	  Handle errors in component UI code better.
	  Don't put anything in the UI (except for debug info) that is
	  not translated.
	  Put error messages in the message area where they belong, and add
	  a method for it to do it consistently.

2007-11-07  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/client.py (Window.help_about_cb): 
	* flumotion/admin/gtk/dialogs.py: 
	Move over AboutDialog to dialogs.
	
	* flumotion/admin/gtk/client.py (Window.debug_reload_all_cb): 
	Refactor, use consistent naming for call/errbacks, use variables
	from the parent nested scopes to avoid sending them as arguments
	to all callbacks.

	* flumotion/test/test_options.py: 
	Use the new log settings APIs and renable commented out tests.
	
2007-11-07  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/component.py (dictlist): New class, a dict of
	nonempty lists.
	(FeedMap.__init__, FeedMap.componentAttached)
	(FeedMap.componentDetached, FeedMap._recalc)
	(FeedMap.getEatersForFeeders): Use dictlists for virtualFeeds,
	simplifying code, and for eatersForFeeders, which was erroneously
	assuming one eater per feeder before. Oops.

	* flumotion/manager/component.py
	(ComponentAvatar.getVirtualFeeds): Return a dict more similar to
	the return of getFeedersForEaters.
	(FeedMap.__init__, FeedMap.componentAttached)
	(FeedMap.componentDetached): Manage a dict of virtual feeds.
	(FeedMap.getFeederAvatar): If there is no component with a given
	feed name, check to see if someone is offering a virtual feed.

	* flumotion/admin/gtk/componentview.py
	(ComponentView.logCategory): Satisfy the swedish mafia.
